src/test/ui/nonscalar-cast.stderr
error[E0605]: non-primitive cast: `Foo` as `isize`
  --> $DIR/nonscalar-cast.rs:7:20
   |
LL |     println!("{}", Foo { x: 1 } as isize);
   |                    ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: an `as` expression can only be used to convert between primitive types. Consider using the `From` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0605`.
